# portfolio-ai

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: aws_ses_interface.py  main.py  openai_chat.py
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/components/: BackToHome.tsx  ChatUi.tsx  Header.tsx  ImpressumLink.tsx  Profile.tsx
